# TTGPT

./: bot.py  config.json.example  pyproject.toml
teamtalk/: __init__.py  teamtalk.py
