[tool.poetry]
name = "ttgpt"
version = "0.1.0"
description = ""
authors = ["JessicaTegner <jessica.tegner@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"
revchatgpt = {version = "^2.0.3", extras = ["unofficial"]}
tiktoken = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
